--- a/episodes/workflowr-project-setup.Rmd
+++ b/episodes/workflowr-project-setup.Rmd
@@ -66,7 +66,7 @@ myproject/
 └── README.md
 ```
 
-
+We see that `about.Rmd` is in the directory `myproject/analysis/`.
 
 
 
@@ -74,4 +74,7 @@ myproject/
 :::::::::::::::::::::::::
 
 ::::::::::::::::::::::::::::::::::::::::::::::::::
+
+
+
 
