--- a/episodes/workflowr-project-setup.Rmd
+++ b/episodes/workflowr-project-setup.Rmd
@@ -76,5 +76,21 @@ We see that `about.Rmd` is in the directory `myproject/analysis/`.
 ::::::::::::::::::::::::::::::::::::::::::::::::::
 
 
+* `data/`: This directory is for raw data files.
+
+* `code/`: This directory is for code that might not be appropriate to include
+in R Markdown format (e.g. for pre-processing the data, or for long-running
+code).
+
+* `output/`: This directory is for processed data files and other
+outputs generated from the code and data. For example, scripts in
+`code/` that pre-process raw data files from `data/` should save the
+processed data files in `output/`.
+
+The `.Rprofile` file is a regular R script that is run once when the project is
+opened. It contains the call `library("workflowr")`, ensuring that workflowr is
+loaded automatically each time a workflowr-project is opened.
+
+
 
 
