--- a/episodes/workflowr-project-setup.Rmd
+++ b/episodes/workflowr-project-setup.Rmd
@@ -76,6 +76,15 @@ We see that `about.Rmd` is in the directory `myproject/analysis/`.
 ::::::::::::::::::::::::::::::::::::::::::::::::::
 
 
+The two required subdirectories are analysis/ and docs/. These directories should never be removed from the workflowr project.
+
+analysis/: This directory contains all the source R Markdown files for implementing the data analyses for your project. It also contains a special R Markdown file, index.Rmd, that does not contain any R code, but will be used to generate index.html, the homepage for your website. In addition, this directory contains the important configuration file _site.yml, which you can use to edit the theme, navigation bar, and other website aesthetics (for more details see the documentation on R Markdown websites). Do not delete index.Rmd or _site.yml.
+
+
+docs/: This directory contains all the HTML files for your website. The HTML files are built from the R Markdown files in analysis/. Furthermore, any figures created by the R Markdown files are saved here. Each of these figures is saved according to the following pattern: docs/figure/<insert Rmd filename>/<insert chunk name>-#.png, where # corresponds to which of the plots the chunk generated (since one chunk can produce an arbitrary number of plots)3.
+
+
+
 * `data/`: This directory is for raw data files.
 
 * `code/`: This directory is for code that might not be appropriate to include
