--- a/episodes/build-site.Rmd
+++ b/episodes/build-site.Rmd
@@ -57,7 +57,24 @@ Run `wflow_status` again and compare the new output with the current output.
 ### `wflow_status()` output before adding preliminary-statistical-modeling.Rmd:
 
 ```
+Status of 3 Rmd files
 
+Totals:
+ 3 Unpublished
+
+The following Rmd files require attention:
+
+Unp analysis/about.Rmd
+Unp analysis/index.Rmd
+Unp analysis/license.Rmd
+
+Key: Unp = Unpublished
+
+The current Git status is: working directory clean
+
+To publish your changes as part of your website, use `wflow_publish()`.
+To commit your changes without publishing them yet, use
+`wflow_git_commit()`.
 ```
 
 
@@ -65,7 +82,48 @@ Run `wflow_status` again and compare the new output with the current output.
 ### `wflow_status()` after adding preliminary-statistical-modeling.Rmd to analysis subdirectory:
 
 ```
+Status of 3 Rmd files
 
+Totals:
+ 3 Unpublished
+
+The following Rmd files require attention:
+
+Unp analysis/about.Rmd
+Unp analysis/index.Rmd
+Unp analysis/license.Rmd
+
+Key: Unp = Unpublished
+
+The current Git status is: working directory clean
+
+To publish your changes as part of your website, use `wflow_publish()`.
+To commit your changes without publishing them yet, use
+`wflow_git_commit()`.
+> wflow_status()
+Status of 4 Rmd files
+
+Totals:
+ 3 Unpublished
+ 1 Scratch
+
+The following Rmd files require attention:
+
+Unp analysis/about.Rmd
+Unp analysis/index.Rmd
+Unp analysis/license.Rmd
+Scr analysis/preliminary-statistical-modeling.Rmd
+
+Key: Unp = Unpublished, Scr = Scratch (Untracked)
+
+The current Git status is:
+
+    status substatus                                          file
+ untracked untracked analysis/preliminary-statistical-modeling.Rmd
+
+To publish your changes as part of your website, use `wflow_publish()`.
+To commit your changes without publishing them yet, use
+`wflow_git_commit()`.
 ```
 
 
