--- a/episodes/exploratory-data-analysis.Rmd
+++ b/episodes/exploratory-data-analysis.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Publish your project with `workflowr`"
+title: "Exploratory data analysis with Rmd"
 teaching: 10
 exercises: 2
 ---
@@ -19,3 +19,34 @@ exercises: 2
 
 
 ::::::::::::::::::::::::::::::::::::::::::::::::
+
+```{r, eval = FALSE}
+install.packages("palmerpenguins")
+```
+
+```{r}
+library(palmerpenguins)
+data(package = 'palmerpenguins')
+head(penguins)
+```
+
+```{r}
+str(penguins)
+```
+
+```{r, eval = FALSE}
+# install tidyverse R package
+install.packages("tidyverse")
+```
+
+
+```{r}
+library(tidyverse)
+penguins |> 
+  count(species)
+penguins |> 
+  group_by(species) |> 
+  summarize(across(where(is.numeric), mean, na.rm = TRUE))
+```
+
+
