--- a/episodes/exploratory-data-analysis.Rmd
+++ b/episodes/exploratory-data-analysis.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Exploratory data analysis with Rmd"
+title: "Exploratory data analysis for Palmer penguins data with Rmd"
 teaching: 10
 exercises: 2
 ---
@@ -19,6 +19,10 @@ exercises: 2
 
 
 ::::::::::::::::::::::::::::::::::::::::::::::::
+
+![](https://github.com/allisonhorst/palmerpenguins/blob/c19a904462482430170bfe2c718775ddb7dbb885/man/figures/lter_penguins.png){width=50%}
+
+
 
 ```{r, eval = FALSE}
 install.packages("palmerpenguins")
