--- a/episodes/exploratory-data-analysis.Rmd
+++ b/episodes/exploratory-data-analysis.Rmd
@@ -15,6 +15,7 @@ exercises: 2
 
 - Use `workflowr` function `wflow_publish()` to publish your website.  
 - List the three steps involved in executing a call to `wflow_publish` function  
+- Add exploratory data analysis R code (and outputs like figures) to your analysis  
 - Recognize that "publishing" your website synchronizes html files (ie, those outputted from rendering Rmd files) and the source Rmd files. By itself, it doesn't post your site to the internet.       
 
 
@@ -80,5 +81,19 @@ mass_flipper
 ```
 
 
+:::::::::::::::::::::::::::::::::::::: challenge
+
+### How do I plot 
+
+:::::::::::::: solution
+
+### Understanding `wflow_publish` arguments
+
+
+
+
+:::::::::::::::::::::::::
+
+::::::::::::::::::::::::::::::::::::::::::::::::::
 
 
