--- a/episodes/publish.Rmd
+++ b/episodes/publish.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Exploratory data analysis for Palmer penguins data with Rmd"
+title: "Using `wflow_publish` to 'publish' locally your website"
 teaching: 10
 exercises: 2
 ---
@@ -7,14 +7,13 @@ exercises: 2
 :::::::::::::::::::::::::::::::::::::: questions 
 
 
-- How do I add a new Rmd file for additional analyses and incorporate it into my website?  
+- How do I synchronize outputted htmls and source Rmds for my whole website?  
 
 ::::::::::::::::::::::::::::::::::::::::::::::::
 
 ::::::::::::::::::::::::::::::::::::: objectives
 
 - Use `workflowr` function `wflow_publish()` to publish your website.  
-- Add exploratory data analysis R code (and outputs like figures) to your analysis  
 - Recognize that "publishing" your website synchronizes html files (ie, those outputted from rendering Rmd files) and the source Rmd files. By itself, it doesn't post your site to the internet.       
 
 
@@ -30,7 +29,70 @@ wflow_publish(files = "analysis/*.Rmd",
 )
 ```
 
+:::::::::::::::::::::::::::::::::::::: challenge
 
+### What do the two arguments, `files` and `message` do and mean in the function `wflow_publish`?    
+
+```{r, eval = FALSE}
+?wflow_publish
+```
+
+```{r, eval = FALSE}
+wflow_status(".")
+```
+
+
+
+:::::::::::::: solution
+
+### Understanding `wflow_publish` arguments
+
+```{r, eval = FALSE}
+?wflow_publish
+```
+
+Looking at the help file for the function `wflow_publish`, we see: 
+
+```
+Usage:
+
+     wflow_publish(
+       files = NULL,
+       message = NULL,
+       all = FALSE,
+       force = FALSE,
+       update = FALSE,
+       republish = FALSE,
+       combine = "or",
+       view = getOption("workflowr.view"),
+       delete_cache = FALSE,
+       seed = 12345,
+       verbose = FALSE,
+       dry_run = FALSE,
+       project = "."
+     )
+```
+
+and 
+
+```
+Arguments:
+
+   files: character (default: NULL). R Markdown files and other files
+          to be added and committed with Git (step 1). Any R Markdown
+          files will also be built (step 2) and their output HTML and
+          figures will be subsequently committed (step 3). Supports
+          file globbing. The files are always built in the order they
+          are listed.
+
+ message: character (default: NULL). A commit message.
+```
+
+
+
+:::::::::::::::::::::::::
+
+::::::::::::::::::::::::::::::::::::::::::::::::::
 
 
 
