--- a/episodes/build-site.Rmd
+++ b/episodes/build-site.Rmd
@@ -26,7 +26,7 @@ wflow_status()
 
 ```{r, eval = FALSE}
 # from within the 'root' directory of your new project
-wflow_build(".")
+wflow_build()
 ```
 
 
