--- a/episodes/build-site.Rmd
+++ b/episodes/build-site.Rmd
@@ -29,7 +29,15 @@ wflow_status()
 wflow_build()
 ```
 
+## Download a Rmd file
 
+```{r, eval = FALSE}
+download.file(url = "https://github.com/fboehm/sharing/blob/main/initial-analysis.Rmd", 
+  destfile = "analysis/initial-analysis.Rmd"
+)
+```
+
+## Check status again
 
 
 ```{r, eval = FALSE}
